[tool.poetry]
name = "hello_django"
version = "0.1.0"
description = "First hello django project"
authors = ["Albina1993 <alba.tleubergen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
